--- a/frontend/backup/KHwtKjoULp0vXwH9k copy.html
+++ b/frontend/backup/KHwtKjoULp0vXwH9k copy.html
@@ -1,7 +1,7 @@
 <html><head><base href="https://grungefootballpredictions.com/dashboard">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Admin Dashboard - Grunge Football Predictions</title>
+<title>Admin Dashboard_ - Grunge Football Predictions</title>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 
