fixes after tests

--- a/react_frontend/public/index.html
+++ b/react_frontend/public/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" href="favicon.ico" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Grunge Football Predictions</title>
+  <title> Football Predictions</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
